include $(top_srcdir)/build-aux/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = cheese

DOC_INCLUDES = 

DOC_FIGURES = \
	figures/cheese.png \
	figures/cheese-delete.png \
	figures/cheese-effects.png \
	figures/cheese-introduction.png \
	figures/cheese-record.png \
	figures/cheese-save.png \
	figures/cheese-take.png \
	figures/effects.png \
	figures/image-properties.png \
	figures/settings.png

DOC_PAGES = \
	apply-effects.page \
	burst-mode.page \
	delete-photo.page \
	disable-countdown.page \
	disable-flash.page \
	image-properties.page \
	index.page \
	introduction.page \
	record-video.page \
	resolution-photo.page \
	save-photo.page \
	take-photo.page \
	view-photo.page \
	wide-mode.page

DOC_LINGUAS = ca cs de el en_GB es fi fr gl hu it ko nl oc pa pt_BR ru sl sv th zh_CN
