include $(top_srcdir)/build-aux/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = cheese

DOC_INCLUDES = 

DOC_FIGURES = \
	figures/cheese.png \
	figures/cheese-delete.png \
	figures/cheese-effects.png \
	figures/cheese-introduction.png \
	figures/cheese-record.png \
	figures/cheese-save.png \
	figures/cheese-take.png \
	figures/effects.png \
	figures/image-properties.png \
	figures/settings.png

DOC_PAGES = \
	effects-apply.page \
	index.page \
	introduction.page \
	mode-wide.page \
	photo-delete.page \
	photo-save.page \
	photo-take.page \
	photo-view.page \
	pref-burst-mode.page \
	pref-countdown.page \
	pref-flash.page \
	pref-image-properties.page \
	pred-photo-resolution.page \
	video-record.page

DOC_LINGUAS = ca cs de el en_GB es fi fr gl hu it ko nl oc pa pt_BR ru sl sv th zh_CN
