@YELP_HELP_RULES@

HELP_ID = cheese

HELP_MEDIA = \
	figures/cheese.png \
	figures/cheese-delete.png \
	figures/cheese-effects.png \
	figures/cheese-introduction.png \
	figures/cheese-record.png \
	figures/cheese-save.png \
	figures/cheese-take.png \
	figures/effects.png \
	figures/image-properties.png \
	figures/settings.png

HELP_FILES = \
	burst-mode.page \
	effects-apply.page \
	index.page \
	introduction.page \
	legal.xml \
	photo-delete.page \
	photo-save.page \
	photo-take.page \
	photo-view.page \
	pref-countdown.page \
	pref-flash.page \
	pref-fullscreen.page \
	pref-image-properties.page \
	pref-resolution.page \
	video-record.page

HELP_LINGUAS = ca cs de el es fr gl hu id pt_BR ru sl zh_CN
