help_sources = [
  'burst-mode.page',
  'effects-apply.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'photo-delete.page',
  'photo-save.page',
  'photo-take.page',
  'photo-view.page',
  'pref-countdown.page',
  'pref-flash.page',
  'pref-fullscreen.page',
  'pref-image-properties.page',
  'pref-resolution.page',
  'video-record.page'
]

help_media = [
  'figures/cheese.png',
  'figures/cheese-delete.png',
  'figures/cheese-effects.png',
  'figures/cheese-introduction.png',
  'figures/cheese-record.png',
  'figures/cheese-save.png',
  'figures/cheese-take.png',
  'figures/effects.png',
  'figures/image-properties.png',
  'figures/settings.png'
]

help_linguas = [
  'ca',
  'cs',
  'de',
  'el',
  'es',
  'fi',
  'fr',
  'gl',
  'hu',
  'id',
  'ko',
  'nl',
  'pl',
  'pt_BR',
  'ru',
  'sl',
  'sv',
  'zh_CN'
]

gnome.yelp('cheese',
  sources: help_sources,
  media: help_media,
  languages: help_linguas)
