sources = [
  'burst-mode.page',
  'effects-apply.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'photo-delete.page',
  'photo-save.page',
  'photo-take.page',
  'photo-view.page',
  'pref-countdown.page',
  'pref-flash.page',
  'pref-fullscreen.page',
  'pref-image-properties.page',
  'pref-resolution.page',
  'video-record.page',
]

media = [
  'figures/cheese.png',
  'figures/effects.png',
  'figures/image-properties.png',
]

gnome.yelp(
  cheese_name,
  sources: sources,
  media: media,
)
